# gpio_emul_net

./: CMakeLists.txt  Kconfig
drivers/gpio/: CMakeLists.txt  gpio_emul_net.c
dts/bindings/gpio/: zephyr,gpio-emul-net.yaml
lib/: CMakeLists.txt
lib/gpio_emul_net/: CMakeLists.txt
lib/gpio_emul_net/include/gpio_emul_net/: gpio_emul_net_protocol.h  gpio_emul_net_protocol_handler.h
lib/gpio_emul_net/src/: gpio_emul_net_protocol_handler.c
